build(pf3): add integrated validation task